<resources>
    <string name="app_name">Comphy</string>
    <string name="tagline">Show us what you see in your mind</string>
    <string name="example_name">Thavita Herdiana</string>
    <string name="example_job">Freelance Photography</string>
    <string name="example_mail"><b>Thavitaaa13@gmail.com</b></string>
    <string name="nav_title_home">Beranda</string>
    <string name="nav_title_feed">Feed Post</string>
    <string name="nav_title_job">Info Job</string>
    <string name="nav_title_training">Pelatihan</string>
    <string name="string_hello">Hallo,</string>
    <string name="string_welcome">Selamat Datang!</string>
    <string name="string_or">Atau</string>
    <string name="string_ok">Oke</string>
    <string name="string_understand">Mengerti</string>
    <string name="string_empty"> </string>
    <string name="string_register">Daftar</string>
    <string name="string_login">Masuk</string>
    <string name="string_create_account">Buat Akun</string>
    <string name="string_your_name">Nama Panjang Kamu</string>
    <string name="string_your_email">Email Kamu</string>
    <string name="string_your_password">Password Kamu</string>
    <string name="string_confirm_password">Konfirmasi Password Baru</string>
    <string name="string_input_name">Masukan Nama Kamu</string>
    <string name="string_input_email">Masukan Email Kamu</string>
    <string name="string_input_password">Masukan Password Kamu</string>
    <string name="string_forgot_password">Lupa Password ?</string>
    <string name="string_password_length">Min.6 Karakter &amp; Angka (0-9)</string>
    <string name="string_verify">Verifikasi</string>
    <string name="string_back">Kembali</string>
    <string name="string_save">Simpan</string>
    <string name="string_next">Selanjutnya</string>
    <string name="string_save_change">Simpan Perubahan</string>
    <string name="string_join_community">Bergabung Sekarang</string>
    <string name="string_leave_community">Keluar Komunitas</string>
    <string name="string_logout">Keluar</string>
    <string name="string_choose">Pilih</string>
    <string name="string_password_error_title">Yuk Perkuat Lagi Password Kamu!</string>
    <string name="string_password_error_description">Masukkan Password diatas 5 Karakter dan Menggunakan Angka (0-9)</string>
    <string name="string_current_location">Yogyakarta,Indonesia</string>
    <string name="string_current_location_raw">Yogyakarta</string>
    <string name="string_search_hint">Cari disini “Womenesia”</string>
    <string name="string_create_community">Buat Komunitas</string>
    <string name="string_max_community">Maksimal 2 Komunitas</string>
    <string name="string_see_all">Lihat Semua</string>
    <string name="string_notification">Notification</string>
    <string name="string_upload_banner">Upload Banner</string>
    <string name="string_required">*</string>
    <string name="string_community_type_private">Privat</string>
    <string name="string_community_type_public">Publik</string>
    <string name="string_community_type_filter_all">Semua</string>
    <string name="string_community_type_filter_private">Privat Komunitas</string>
    <string name="string_community_type_filter_public">Publik Komunitas</string>
    <string name="string_set_filter">Filter</string>
    <string name="string_set_bookmark">Bookmark</string>
    <string name="string_apply">Terapkan</string>
    <string name="string_visit_job">Kunjungi Lowongan</string>
    <string name="string_register_now">Daftar Sekarang</string>
    <string name="string_job_description">Deskripsi</string>
    <string name="string_job_requirement">Persyaratan</string>
    <string name="string_send">Kirim</string>
    <string name="string_upload_text">Text/Artikel</string>
    <string name="string_upload_video">Upload Video</string>
    <string name="string_upload_image">Upload Foto</string>
    <string name="string_feed_main">Utama</string>
    <string name="string_feed_recommendation">Rekomendasi</string>
    <string name="string_event_desc">Deskripsi</string>
    <string name="string_event_impl">Pelaksanaan</string>
    <string name="string_post">Unggah Post</string>
    <string name="string_upload_post">Unggah Post</string>
    <string name="string_back_to_top">Kembali Ke Atas</string>
    <string name="string_explore">Explore</string>
    <string name="string_search">Pencarian</string>
    <string name="string_search_result">Hasil Pencarian</string>
    <string name="string_seeking">Pencarian</string>
    <string name="string_follow">Ikuti</string>
    <string name="string_followed">Mengikuti</string>
    <string name="string_post_empty">Kamu Belum Mengunggah apapun. Unggah Sekarang!</string>
    <string name="string_delete">Hapus</string>
    <string name="string_ban">Keluarkan</string>
    <string name="string_cancel">Batalkan!</string>
    <string name="string_follower">Pengikut</string>
    <string name="string_following">Di ikuti</string>
    <string name="string_privacy">Privacy &amp; Security</string>
    <string name="string_change_password">Ganti Password</string>
    <string name="string_verify_password_desc">Silahkan Masukkan Password kamu saat ini sebagai verifikasi terhadap akunmu.</string>
    <string name="string_change_password_desc">Silahkan Masukkan Password baru kamu dan bedakan dengan password sebelumnya.</string>
    <string name="string_current_password">Password Saat ini</string>
    <string name="string_new_password">Password Baru</string>
    <string name="string_copy">Salin</string>
    <string name="string_member">Anggota</string>
    <string name="string_share_community">Bagikan Komunitas</string>
    <string name="string_community_link">Tautan Komunitas</string>
    <string name="string_success_ban">Berhasil Mengeluarkan</string>
    <string name="string_comment">Komentar</string>
    <string name="string_retry">Coba Lagi</string>
    <string name="string_next_subject">Materi Selanjutnya : </string>
    <string name="string_tips">Tips Fotografi</string>
    <string name="string_source">Sumber : </string>
    <string name="string_saved">Tersimpan</string>
    <string name="string_saved_empty">Kamu belum menyimpan apapun</string>
    <string name="string_success_delete">Berhasil Menghapus</string>
    <string name="string_success_delete_desc">Kamu telah menghapus postingan yang telah kamu unggah</string>
    <string name="string_success_change_password">Berhasil Mengganti</string>
    <string name="string_success_change_password_desc">Kamu baru saja berhasil merubah Password.</string>
    <string name="string_filter_by">Filter Berdasarkan : </string>
    <string name="string_feature_blocked">Fitur Belum Tersedia</string>
    <string name="string_feature_blocked_desc">Fitur yang Kamu Pilih Masih Dalam Proses Tahap Penyelesaian</string>
    <string name="placeholder_post_title_count">%1$s/40 karakter</string>
    <string name="placeholder_time_passed">%1$s yang lalu</string>
    <string name="placeholder_camera">Kamera : %1$s</string>
    <string name="placeholder_lens">Lensa : %1$s</string>
    <string name="placeholder_flash">Flash : %1$s</string>
    <string name="placeholder_iso">ISO : %1$s</string>
    <string name="placeholder_shutter">Shutter Speed : %1$s</string>
    <string name="placeholder_aperture">Aperture: %1$s</string>
    <string name="placeholder_post_location">%1$s,Indonesia</string>
    <string name="placeholder_likes_count">%1$s Orang Menyukai Postingan ini</string>
    <string name="placeholder_comments_count">%1$s Orang berkomentar</string>
    <string name="placeholder_comment_reply_count">%1$s Balasan</string>
    <string name="placeholder_comment_reply_parent">Balas Komentar : @%1$s</string>
    <string name="placeholder_community_type">Komunitas %1$s</string>
    <string name="placeholder_community_members_count">%1$s Anggota</string>
    <string-array name="community_category">
        <item>Human Interest Photography</item>
        <item>Portrait Photography</item>
        <item>Landscape Photography</item>
        <item>Fashion Photography</item>
        <item>Journalism Photography</item>
    </string-array>
    <string name="error_email">*Masukkan Email Kamu dengan Benar</string>
    <string name="error_password">*Masukkan Password min.6 Karakter &amp; Angka (0-9)</string>
    <string name="error_current_password">*Masukkan Password kamu saat ini.</string>
    <string name="error_name">*Silahkan Masukkan Nama Panjang Kamu.</string>
    <string name="error_mail">*Silahkan Masukkan Email Kamu</string>
    <string name="error_otp">*Masukkan OTP 4 digit.</string>
    <string name="title_onboard_1">Bergabunglah Dengan Komunitas!</string>
    <string name="title_onboard_2">Kami Menyediakan Mini Course Untuk Kamu!</string>
    <string name="title_onboard_3">Share Hasil Terbaik Kamu ke Sesama Pengguna!</string>
    <string name="desc_onboard_1">Comphy Menyediakan 5 Kategori Komunitas yang bisa kamu pilih sesuai keinginan kamu!</string>
    <string name="desc_onboard_2">Mini Course tersedia untuk kamu yang ingin menambah wawasan dibidang fotografi dan dapatkan reward berupa badge!</string>
    <string name="desc_onboard_3">Dapatkan Like dan Komentar sebanyak mungkin dari pengguna lain untuk karya kamu yang menakjubkan!</string>
    <string name="button_onboard_skip">Lewati</string>
    <string name="button_onboard_next">Lanjut</string>
    <string name="login_to_register">Belum Punya Akun ?</string>
    <string name="login_to">Masuk ke</string>
    <string name="login_with_google">Masuk menggunakan google</string>
    <string name="login_error_title">Maaf Kamu Gagal Masuk!Jangan Khawatir Coba Ulangi</string>
    <string name="login_error_description">Pastikan Email dan Password Kamu Sudah Benar.</string>
    <string name="register_to_login">Sudah Punya Akun ?</string>
    <string name="register_to">Daftar ke</string>
    <string name="job_job_requirement">Persyaratan :</string>
    <string name="job_detail_vacancy_time">Waktu Proses Lamaran :</string>
    <string name="job_detail_vacancy_time_content">24 Hari</string>
    <string name="job_detail_level">Tingkat Pekerjaan :</string>
    <string name="job_detail_level_content">Pegawai (non-manajemen &amp; non-supervisor)</string>
    <string name="job_detail_industry">Industri :</string>
    <string name="job_detail_industry_content">Makanan &amp; Minuman/Katering/Restoran</string>
    <string name="job_detail_allowances">Tunjangan dan Lain-lain :</string>
    <string name="job_detail_allowances_content">Tip, Bisnis (contoh: Kemeja)</string>
    <string name="post_input_title">Judul Postingan</string>
    <string name="post_input_title_max_char">0/40 karakter</string>
    <string name="post_input_title_hint">Masukan Judul Postingan</string>
    <string name="post_input_caption">Apa yang ingin kamu tulis?</string>
    <string name="post_input_caption_max_char">0/400 karakter</string>
    <string name="post_input_caption_hint">Masukkan Text Disini</string>
    <string name="post_input_camera">Kamera</string>
    <string name="post_input_camera_hint">Tipe Kamera</string>
    <string name="post_input_lens">Lensa</string>
    <string name="post_input_lens_hint">Tipe Lensa</string>
    <string name="post_input_flash">Flash</string>
    <string name="post_input_flash_hint">Tipe Flash</string>
    <string name="post_input_iso">ISO</string>
    <string name="post_input_iso_hint">Masukkan ISO</string>
    <string name="post_input_shutter">Shutter Speed</string>
    <string name="post_input_shutter_hint">Masukkan Shutter Speed</string>
    <string name="post_input_aperture">Aperture</string>
    <string name="post_input_aperture_hint">Masukkan Aperture</string>
    <string name="post_to_set">Pengaturan Postingan</string>
    <string name="profile_experience_title">Fotografer</string>
    <string name="profile_experience_description">National Geography</string>
    <string name="profile_experience_date">2020-2021</string>
</resources>