<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.comphy.photo.ui.main.fragment.home.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.comphy.photo.ui.main.fragment.feed.FeedFragment"
        android:label="@string/nav_title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_job"
        android:name="com.comphy.photo.ui.main.fragment.job.JobFragment"
        android:label="@string/nav_title_job"
        tools:layout="@layout/fragment_job" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.comphy.photo.ui.main.fragment.training.TrainingFragment"
        android:label="@string/nav_title_training"
        tools:layout="@layout/fragment_training" />

</navigation>